--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     </head>
     <body>
             <h1>FULL STACK</h1>
-            <h2>Welcome</h2>
-            <h3>DECILE A PAPÁ</h3>
-            <h4>Soy Cami</h4>
+            <h2>HORARIOS CAMILA TISERA</h2>
+            
+            <table>
+                <thead>
+                    <p><th>LUNES</th></p>
+                    <p><th>MARTES</th></p>
+                    <p><th>MIERCOLES</th></p>
+                    <p><th>JUEVES</th></p>
+                    <p><th>VIERNES</th></p>
+                    <p><th>SABADO</th></p>
+                    <p><th>DOMINGO</th></p>
+                </thead>
+
+                <tbody>
+                    <p><td>8am a 11am TALLER</td></p>
+                    <p><td>8am a 15pm TRABAJO</td></p>
+                    <p><td>8am a 15pm TRABAJO</td></p>
+                    <p><td>8am a 11am TALLER</td></p>
+                    <p><td>9am a 11am INGLES</td></p>
+                    <p><td>10am a 13pm ESTUDIAR</td></p>
+                    <p><td>10am a 14pm ESTUDIAR</td></p>
+                </tbody>
+            </table>
     </body>
 
 </html>
