--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ITBA</title>
+        <title>CV CAMILA TISERA</title>
     </head>
     <body>
-            <h1>FULL STACK</h1>
             <h2>HORARIOS CAMILA TISERA</h2>
             
             <table>
